# SpeleoDB

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .talismanrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  CONTRIBUTORS.txt  DEPLOY.md  DEPLOY_Heroku.md  LICENSE  Makefile  OPTIONS.md  Procfile  RAILWAY.md  README.md  REFactor_Plan_Map_Viewer.md  conftest.py  docs.yml  eslint.config.mjs  generate_field_encryption_key.py  local.yml  main.py  manage.py  nixpacks.toml  package-lock.json  package.json  production.yml  pyproject.toml  railpack.json  railway.toml  requirements-mypy.txt  vite.config.mjs  vitest.config.mjs
.cursor/rules/: agents-md.mdc  coding-rules.mdc  docs-maintenance.mdc  except-syntax.mdc  preserve-comments.mdc  python-imports.mdc
.devcontainer/: bashrc.override.sh  devcontainer.json
.envs/: .django  .postgres  test.env.dist
.envs/.local/: .django
.envs/.production/: .django.dist  .postgres.dist
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  💭-proposal---feature-request.md
.github/instructions/: xss-protection.instructions.md
.github/workflows/: ci.yml  cleanup_gitlab.yml  pre-commit.yml  update_browserslist_db.yml
compose/: Dockerfile  __init__.py  setup  setup_local_gitlab.py  start
compose/gitlab/: ensure_bootstrap_token.rb  healthcheck
compose/postgres/: Dockerfile
compose/tests/: __init__.py  test_setup_local_gitlab.py
config/: __init__.py  api_router.py  asgi.py  celery_app.py  urls.py  websocket.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: README.md  api-docs-access.md  coding-rules.md  conf.py  dashboard.md  experiment-field-names.md  experiment-record-editing.md  frontend-forms.md  howto.rst  index.rst  landmark-collections.md  local-debugging.md  local-object-storage.md  make.bat  monorepo-native-dependencies.md  node-tooling.md  project-colors.md  project-geojson-command.md  project-listing.md  tailwind-v4.md  upload-error-handling.md  users.rst  vite-assets.md  xss-protection.md
docs/map-viewer/: api-reference.md  architecture.md  data-flow.md  depth-domain-reactivity.md  design-requirements.md  features.md  map_viewer_depth_coloring.md  ogc-url-and-geometry-contract.md  permissions-and-access.md  testing-and-quality.md
fixtures/: common.json  emailaddresses.json  models.json  surveys.json  test_simple.tml  users.json
frontend_common/: app.js  app.test.js  asset_graph.test.js  entries.json  readiness.js
frontend_common/controllers/: admin-experiment-field.js  auth-form.js  copy-token.js  danger-zone.js  dashboard.js  dmp-doctor.js  dmp2json.js  entity-crud.js  error-page.js  experiment-data.js  experiment-form.js  feedback.js  fleet.js  gis-view-form.js  git-instructions.js  git-view.js  gps-tracks.js  landmark-details.js  mutex-lock.js  permission-modal.js  private-map.js  project-upload.js  projects.js  public-gis.js  public-shell.js  revision-history.js  station-tags.js  team-permission.js  xls2compass.js  xls2dmp.js
frontend_common/test/: setup.js
frontend_errors/: apps.py  urls.py
frontend_errors/templates/: 400.html  403.html  404.html  500.html  base_error.html
frontend_private/: apps.py  urls.py  views.py
frontend_private/templates/: base_admin.html  base_private.html  yolo.html
frontend_private/templatetags/: filter_utils.py  is_in_list.py  set_var.py  str_format.py  team_access.py  url_templates.py
frontend_private/tests/: test_cylinder_fleet_watchlist_view.py  test_dashboard_views.py  test_project_lock_banner.py  test_projects_template.py  test_sensor_fleet_watchlist_view.py  test_sensor_install_views.py  test_station_tags_view.py  test_urls.py  test_views.py  test_webviewer_restrictions.py
frontend_private/views/: __init__.py  base.py  cylinder_fleets.py  experiments.py  gis_views.py  gps_tracks.py  landmark_collections.py  map.py  project.py  sensor_fleets.py  surface_networks.py  team.py  tools.py  user.py
frontend_public/: admin.py  apps.py  models.py  sitemap.py  storages.py  urls.py  views.py
frontend_public/migrations/: 0001_initial.py  0002_alter_boardmember_photo_alter_explorermember_photo_and_more.py  0003_scientificmember.py  0004_rename_created_at_boardmember_creation_date_and_more.py
frontend_public/templates/: auth_base.html  base.html  footer.html
frontend_public/templatetags/: __init__.py  people_tags.py
frontend_public/tests/: test_admin.py  test_image_processing.py  test_models.py  test_people_view.py  test_storages.py  test_theme_contract.py  test_urls.py  test_views.py
requirements/: base.txt  local.txt  production.txt
scripts/: verify-vite-watch.mjs
speleodb/: __init__.py  api_router.py  conftest.py  debug_toolbar.py  middleware.py  urls.py
speleodb/common/: admin.py  apps.py  caching.py  enums.py  models.py  test_station_type_api.py
speleodb/gis/: admin.py  apps.py  landmark_collections.py  ogc_helpers.py  ogc_models.py  ogc_openapi.py
speleodb/git_engine/: core.py  exceptions.py  gitlab_manager.py
speleodb/git_proxy/: apps.py  tests.py  urls.py  views.py
speleodb/gitserver/: Readme.md  apps.py  git.py  tests.py  urls.py  views.py
speleodb/permissions/: __init__.py  apps.py
speleodb/plugins/: admin.py  apps.py
speleodb/processors/: __init__.py  artifact.py  auto_selector.py  base.py
speleodb/surveys/: admin.py  apps.py  fields.py  models.py  signals.py  tasks.py
speleodb/templates/: base.html  base_ckc.html  base_old.html
speleodb/users/: adapters.py  admin.py  apps.py  backends.py  context_processors.py  forms.py  managers.py  models.py  signals.py  tasks.py  urls.py  views.py
speleodb/utils/: admin_filters.py  api_decorators.py  api_mixin.py  decorators.py  (+25 more)
tailwind_css/: apps.py  style.css
utility/: install_python_dependencies.sh  requirements-bionic.apt  requirements-bookworm.apt  requirements-bullseye.apt  requirements-buster.apt  requirements-focal.apt  requirements-jammy.apt  requirements-jessie.apt  requirements-stretch.apt  requirements-trusty.apt  requirements-xenial.apt
well_known/: apps.py  urls.py  views.py
(+1087 files in other folders)
