[tool.uv.sources]
django-celery-beat = { git = "https://github.com/celery/django-celery-beat", rev = "bd429063cbb227c00905e7693c38895e44ff8e47" }
compass-lib = { git = "https://github.com/OpenSpeleo/pytool_compass_lib.git", rev = "8e7af42d9d4f88d12d3592a8295757941b9e82f4" }
# openspeleo-lib = { path = ".workdir/test_wheels/openspeleo_lib-0.0.12-py3-none-any.whl" }

# ==== UV Settings ==== #
[project]
name = "SpeleoDB_Repo"
version = "1.0.0"
authors = [{ name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    # Utils
    # ------------------------------------------------------------------------------
    "argon2-cffi==25.1.0",  # https://github.com/hynek/argon2-cffi
    "dict-hash==1.3.7",     # https://github.com/LucaCappelletti94/dict_hash
    "python-dotenv==1.2.1", # https://github.com/theskumar/python-dotenv
    "pytz==2025.2",         # https://github.com/stub42/pytz
    "timeago==1.0.16",      # https://github.com/hustcc/timeago
    "tomlkit==0.14.0",      # https://github.com/python-poetry/tomlkit
    "wrapt==2.1.1",         # https://github.com/GrahamDumpleton/wrapt

    # Redis
    # ------------------------------------------------------------------------------
    "django-redis==6.0.0", # https://github.com/jazzband/django-redis
    "hiredis==3.3.0",      # https://github.com/redis/hiredis-py
    "redis==7.1.1",        # https://github.com/redis/redis-py

    # Data Processing & Writing
    # ------------------------------------------------------------------------------
    "xlsxwriter==3.2.9", # https://github.com/jmcnamara/XlsxWriter

    # Media Processing
    # ------------------------------------------------------------------------------
    "av==16.1.0",           # https://github.com/PyAV-Org/PyAV
    "ffmpeg-python==0.2.0", # https://github.com/kkroening/ffmpeg-python
    "Pillow==12.1.1",       # https://github.com/python-pillow/Pillow
    "pillow-heif==1.2.0",   # https://github.com/bigcat88/pillow_heif
    "PyMuPDF==1.27.1",      # https://github.com/pymupdf/PyMuPDF

    # GeoJSON & GIS
    # ------------------------------------------------------------------------------
    "fastkml[lxml]==1.4.0",  # https://github.com/cleder/fastkml
    "geojson==3.2.0",        # https://github.com/jazzband/geojson
    "gpxpy==1.6.2",          # https://github.com/tkrajina/gpxpy
    "jsonschema-rs==0.42.0", # https://github.com/Stranger6667/jsonschema
    "orjson==3.11.7",        # https://github.com/ijl/orjson

    # Speleo Libraries
    # ------------------------------------------------------------------------------
    "mnemo-lib==0.0.7",       # https://github.com/OpenSpeleo/pytool_mnemo_lib
    "compass-lib==0.0.5",     # https://github.com/OpenSpeleo/pytool_compass_lib
    "openspeleo-lib==0.0.15", # https://github.com/OpenSpeleo/pytool_openspeleo_lib

    # Git Management
    # ------------------------------------------------------------------------------
    "GitPython==3.1.46",    # https://github.com/gitpython-developers/GitPython
    "python-gitlab==8.0.0", # https://python-gitlab.readthedocs.io/en/stable/

    # Django
    # ------------------------------------------------------------------------------
    "django==6.0.2",                   # https://www.djangoproject.com/
    "django-allauth==65.14.3",         # https://github.com/pennersr/django-allauth
    "django-countries==8.2.0",         # https://github.com/SmileyChris/django-countries/
    "django-dynamic-raw-id==4.4",      # https://github.com/lincolnloop/django-dynamic-raw-id
    "django-environ==0.12.1",          # https://github.com/joke2k/django-environ
    "django-hijack==3.7.6",            # https://github.com/django-hijack/django-hijack/
    "django-import-export==4.4.0",     # https://github.com/django-import-export/django-import-export
    "django-js-reverse==0.10.2",       # https://github.com/vintasoftware/django-js-reverse
    "django-model-utils==5.0.0",       # https://github.com/jazzband/django-model-utils
    "django-polymorphic==4.11.0",      # https://github.com/jazzband/django-polymorphic
    "django-rest-polymorphic==0.1.10", # https://github.com/denisorehovsky/django-rest-polymorphic
    "django-storages[s3]==1.14.6",     # https://github.com/jschneier/django-storages

    # Django REST Framework
    # ------------------------------------------------------------------------------
    "djangorestframework==3.16.1", # https://github.com/encode/django-rest-framework
    "django-cors-headers==4.9.0",  # https://github.com/adamchainz/django-cors-headers
    "drf-spectacular==0.29.0",     # https://github.com/tfranzel/drf-spectacular

    # AWS
    # ------------------------------------------------------------------------------
    "botocore==1.42.50", # https://github.com/boto/botocore
    "boto3==1.42.49",    # https://github.com/boto/boto3

    # Async Jobs & Workers
    # ------------------------------------------------------------------------------
    "celery==5.6.2",             # https://github.com/celery/celery
    "django-celery-beat==2.8.1", # https://github.com/celery/django-celery-beat
    "flower==2.0.1",             # https://github.com/mher/flower
    "watchfiles==1.1.1",         # https://github.com/samuelcolvin/watchfiles

    # Sentry-SDK
    # ------------------------------------------------------------------------------
    "sentry-sdk[django]==2.52.0", # https://github.com/getsentry/sentry-python
]

[project.optional-dependencies]
local = [
    "werkzeug[watchdog]==3.1.5", # https://github.com/pallets/werkzeug
    "ipdb==0.13.13",             # https://github.com/gotcha/ipdb
    "psycopg[binary]==3.3.2",    # https://github.com/psycopg/psycopg

    # Testing
    # ------------------------------------------------------------------------------
    "deepdiff>=7.0,<9.0",   # https://github.com/seperman/deepdiff
    "factory-boy==3.3.3",   # https://github.com/FactoryBoy/factory_boy
    "mypy==1.19.1",         # https://github.com/python/mypy
    "parameterized==0.9.0", # https://github.com/wolever/parameterized
    "pytest-sugar==1.1.1",  # https://github.com/Frozenball/pytest-sugar
    "pytest==9.0.2",        # https://github.com/pytest-dev/pytest

    # Typing
    # ------------------------------------------------------------------------------
    "djangorestframework-stubs[compatible-mypy]==3.16.8", # https://github.com/typeddjango/djangorestframework-stubs
    "django-stubs[compatible-mypy]==5.2.9",               # https://github.com/typeddjango/django-stubs
    "celery-types==0.24.0",                               # https://github.com/sbdchd/celery-types
    "types-factory-boy==0.4.1",                           # https://github.com/youtux/types-factory-boy
    "types-pytz==2025.2.0.20251108",                      # https://github.com/python/typeshed

    # Django Testing
    # ------------------------------------------------------------------------------
    "django-coverage-plugin==3.2.0", # https://github.com/nedbat/django_coverage_plugin
    "pytest-django==4.12.0",         # https://github.com/pytest-dev/pytest-django

    # Code quality
    # ------------------------------------------------------------------------------
    "ruff==0.15.1",      # https://github.com/astral-sh/ruff
    "coverage==7.13.4",  # https://github.com/nedbat/coveragepy
    "djlint==1.36.4",    # https://github.com/Riverside-Healthcare/djLint
    "pre-commit==4.5.1", # https://github.com/pre-commit/pre-commit

    # Django
    # ------------------------------------------------------------------------------
    "django-debug-toolbar==6.2.0",    # https://github.com/jazzband/django-debug-toolbar
    "django-extensions==4.1",         # https://github.com/django-extensions/django-extensions
    "django-schema-viewer==0.5.3",    # https://github.com/pikhovkin/django-schema-viewer
    "django-silk[formatting]==5.4.3", # https://github.com/jazzband/django-silk
]

production = [
    "gunicorn==25.1.0", # https://github.com/benoitc/gunicorn
    # "granian==2.5.2",  # https://github.com/emmett-framework/granian
    "psycopg[c]==3.3.2", # https://github.com/psycopg/psycopg

    # AWS
    # ------------------------------------------------------------------------------
    "cryptography==46.0.5", # https://github.com/pyca/cryptography

    # Django
    # ------------------------------------------------------------------------------
    "django-anymail[mailersend]==14.0", # https://github.com/anymail/django-anymail
]

# Django
# ------------------------------------------------------------------------------
# ==== pytest ====
[tool.pytest.ini_options]
norecursedirs = ".uv/*"
minversion = "6.0"
# addopts = "--ds=config.settings.test --import-mode=importlib"
addopts = "--ds=config.settings.test --reuse-db  --create-db --import-mode=importlib"
# addopts = "--ds=config.settings.test --create-db --import-mode=importlib"
# addopts = "--ds=config.settings.test -vvv --capture=no --reuse-db --import-mode=importlib"
python_files = ["tests.py", "test_*.py"]
filterwarnings = [
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning",
    "ignore:.*builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:.*builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:.*builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["speleodb/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
exclude = [
    "**/*.pyc",
    "**/node_modules",
    "**/__pycache__",
    ".devcontainer",
    ".envs",
    ".git",
    ".github",
    ".ipython",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".uv",
    ".venv",
    ".vscode",
    ".workdir",
    "~/.cache",
    "bin",
    "docs",
    "fixtures",
    "mediafiles",
    "staticfiles",
]
check_untyped_defs = true
# ignore_missing_imports = true
disable_error_code = "method-assign"
follow_untyped_imports = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = "3.14"
scripts_are_modules = true
strict = true
cache_fine_grained = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.mypy-speleodb.api.v1.tests]
disallow_untyped_calls = false
allow_untyped_calls = true

[[tool.mypy.overrides]]
# Django settings use libraries that don't provide stubs (django-environ)
disable_error_code = "no-untyped-call"

module = "config.settings.*"
[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.tests.*"
# Check for untyped calls
disallow_untyped_calls = false
# Check for untyped decorator functions
disallow_untyped_decorators = false

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*.py",
    "staticfiles/*",
    "main.py",
]
# Same as Django: https://github.com/cookiecutter/cookiecutter-django/issues/4792.
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ICN",
    "G",
    'INP',
    'PIE',
    "T20",
    'PYI',
    'PT',
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    # "ARG", # Unused function argument
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    # "NPY",
    # "AIR",
    "PERF",
    # "FURB",
    # "LOG",
    "RUF",
]
ignore = [
    "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "SIM102", # sometimes it's better to nest
    # of types for comparison.
    # Deactivated because it can make the code slow:
    # https://github.com/astral-sh/ruff/issues/7871
    "EM101",  # Checks for the use of string literals in exception constructors.
    "EM102",  # Checks for the use of f-strings in exception constructors.
    "TRY003", # Checks for long exception messages that are not defined in the
    # exception class itself.
    "COM812", # Checks for the absence of trailing commas.
    "UP009",  # Checks for unnecessary UTF-8 encoding declarations.
    "EXE001", # Checks for a shebang directive in a file that is not executable.
    "FBT002", # Checks for the use of boolean positional arguments in function
    # definitions, as determined by the presence of a boolean default value.
    "PLR0913", # Checks for function definitions that include too many arguments.
    "S311",    # Checks for uses of cryptographically weak pseudo-random number generators.
    "ERA001",  # Checks for commented-out Python code.
    "C901",    # Checks for functions with a high McCabe complexity.
    "PLR0911", # Functions or methods with many return statements are harder to understand
    # and maintain, and often indicative of complex logic.
    "PLR0912", # Functions or methods with many branches are harder to understand and
    # maintain than functions or methods with fewer branches.
    "G004",   # Checks for uses of f-strings to format logging messages.
    "TRY300", # Checks for return statements in try blocks.
    "FBT001", # Checks for the use of boolean positional arguments in function definitions,
    # as determined by the presence of a bool type hint.
    "PLR0915", # Checks for functions that are too long.
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true

[tool.pyright]
# ignore = ["*"]
# typeCheckingMode = "off"
exclude = [
    "**/*.pyc",
    "**/node_modules",
    "**/__pycache__",
    ".devcontainer",
    ".envs",
    ".git",
    ".github",
    ".ipython",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".uv",
    ".venv",
    ".vscode",
    ".workdir",
    "bin",
    "docs",
    "fixtures",
    "mediafiles",
]
pythonVersion = '3.14'
reportUnknownMemberType = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportUnknownVariableType = "none"
